Fixed scaling on smaller screens

--- a/src/styles/projectbox.css
+++ b/src/styles/projectbox.css
@@ -324,7 +324,7 @@
   }
 
   .testImg.mobile {
-    width: 60vw;
+    max-width: 60vw;
   }
   .modalImg {
     width: auto;
